--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.0.2",
     "@angular/common": "^7.0.2",
     "@angular/compiler": "^7.0.2",
