--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,12 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/web.config"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css",
-              "src/web.config"
+              "src/styles.css"
             ],
             "scripts": []
           },
